force-app/main/default/objects/TextoOfertasEstandar__c/TextoOfertasEstandar__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TextoOfertasEstandar</label>
</CustomObject>