force-app/main/default/objects/TextoOfertasEstandar__c/fields/TextoOferta__c.field-meta.xml
<CustomField>
    <fullName>TextoOferta__c</fullName>
    <label>TextoOferta</label>
    <length>100</length>
    <type>Text</type>
</CustomField>