force-app/main/default/objects/TextoOfertasEstandar__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>