force-app/main/default/objects/TextoOfertasEstandar__c/listViews/SADA.listView-meta.xml
<ListView>
    <fullName>SADA</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>Oferta__c</columns>
    <columns>TextoOferta__c</columns>
    <columns>Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Oferta__c</field>
        <operation>contains</operation>
        <value>SADA</value>
    </filters>
    <label>AGRI</label>
    <language>es</language>
</ListView>