force-app/main/default/objects/TextoOfertasEstandar__c/listViews/Ver_bien.listView-meta.xml
<ListView>
    <fullName>Ver_bien</fullName>
    <columns>NAME</columns>
    <columns>Activo__c</columns>
    <columns>Oferta__c</columns>
    <columns>TextoOferta__c</columns>
    <columns>Tipo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Ver bien</label>
    <language>es</language>
</ListView>